developing/pomodoro/pomodoro.css
#focus__app {
    font-family: Helvetica, Arial, sans-serif;
    font-size: 14px;
    user-select: none;
    color: black;

    /* Theme colors */
    --FOCUS__DARKGRAY: #444;
    --FOCUS__GRAY: #ccc;
    --FOCUS__WHITE: #fafafa;
    --FOCUS__BLUE: royalblue;
    --FOCUS__GREEN: #00943c;
}

#focus__pomodoro-container {
    position: absolute;
    cursor: pointer;
    bottom: 30px;
    right: 30px;
    width: 50px;
    height: 50px;
}

#focus__foreground path {
    stroke: var(--FOCUS__BLUE);
}

#focus__pomodoro.focus__break-mode #focus__foreground path {
    stroke: var(--FOCUS__GREEN);
}

.focus__done-message-container {
    position: relative;
    /* bottom: 0;
    left: 0; */
    z-index: -1;
}
.focus__done-message-container .wrapper {
    position: relative;
    width: 150px;
    height: 116px;
}
.focus__done-message-container .dialog-box {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    width: 100%;
    height: 100%;
}
.focus__done-message-container .content-wrapper {
    position: absolute;
    top: 7px;
    left: 0;
    text-align: center;
    width: calc(100% - 20px);
    height: calc(100% - 20px);
    padding: 10px;
}

#focus__start-break-button {
    margin-block: 4px;
}

#focus__done-with-break-message {
    margin-block: 6px;
    text-align: center;
}

#focus__app>* { /* children need to have z-index because parent has position: static */
    z-index: 10000; /* Covers up the Grammarly extension which sits in the same place. Take that, Grammarly! */
}

#focus__foreground {
    transform: rotate(90deg);
    translate: 100px;
}
.focus__dark-mode #focus__foreground {
    filter: brightness(0); /* white */
}

.focus__btn {
    border: 2px solid #444;
    cursor: pointer;
    border-radius: 5px;
    background-color: #fafafa;
}
.focus__btn:hover {
    background-color: #eee;
}
.focus__btn:active {
    background-color: #ddd;
}

#focus__smiley-face circle {
    fill: var(--FOCUS__BLUE);
    stroke: none
}
#focus__smiley-face path {
    fill: none;
    stroke: var(--FOCUS__BLUE);
}


#focus__start-hover>* {
    z-index: 10000;
}
#focus__start-hover-children {
    min-width: 80px;
    padding: 8px 10px;
    position: absolute;
    bottom: 80px;
    right: 20px;
    padding: 6px 10px;
    border: 2px solid #ccc;
    border-radius: 3px;
    background-color: #fafafa;
}
#focus__start-hover-triangle {
    position: absolute;
    bottom: 65px;
    right: 30px;
}
#focus__start-btn {
    filter: brightness(0.98); /* slightly darker bg */
    margin: 5px auto 1px auto;
    display: block;
    padding: 2px;
    border-color: #aaa;
}

#focus__middle-hover {
    position: absolute;
    display: flex;
    bottom: 64px;
    right: 30px;
    width: 50px;
    height: 25px; /* a little higher than the 50px real padding */
}
#focus__time-left-text {
    z-index: 10002;
    cursor: text;
    color: black;
}

#focus__time-left-editable { /* appears when editing #focus__time-left-text */
    position: absolute;
    bottom: 38px;
    right: 24px;
    width: 3.6ch;
    font-size: 24px;
    font-family: Helvetica;
    text-align: center;
    border-radius: 5px 0 0 5px;
    border: 2px solid #464646;
    border-right-width: 1px;
    outline: none;
}
#focus__middle-hover-status, #focus__middle-hover-more-btn { /* children of middle items*/
    height: 20px;
    width: 25px;
    cursor: pointer;
    user-select: none;
}
#focus__finish-editing-time-left {
    position: absolute;
    bottom: 38px;
    right: 2px;
    width: 19px;
    height: 29.6px;
    background-color: rgb(10, 190, 10);
    border-radius: 0 5px 5px 0;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    border: 2px solid #464646;
    border-left-width: 1px;
}
.focus__dark-mode #focus__finish-editing-time-left {
    filter: invert(1);
}

/* special button border override */
#focus__middle-hover-status {
    border-right-width: 1px;
    border-radius: 5px 0 0 5px;
}
#focus__middle-hover-more-btn {
    border-left-width: 1px;
    border-radius: 0 5px 5px 0;
}
#focus__middle-hover-more-btn>span {
    position: relative;
    top: 1.2px;
}

#focus__done-message {
    position: absolute;
    bottom: 60px;
    right: 10px;
    cursor: pointer;
}

/* More Options Dropdown */
.focus__more-dropdown-item {
    display: flex;
    align-items: center;
    gap: 5px;
    border: 1px solid #222;
    border-bottom: none;
    padding: 3px 5px;
    cursor: pointer;
    background: #fff;
}
.focus__more-dropdown-item:hover {
    background-color: #eee;
}

.focus__more-dropdown-item.first {
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
.focus__more-dropdown-item.last {
    border-bottom: 1px solid #222;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
}
#focus__more-dropdown-container {
    position: absolute;
    bottom: 120px;
    right: -11px;
    width: fit-content;
    height: 100%;
}
#focus__more-dropdown-triangle {
    position: absolute;
    bottom: 25px;
    right: 6px;
    width: 15px;
    height: 12px;
    /* Make triangle */
    clip-path: polygon(0 0, 100% 0, 50% 100%);
    background-color: #222;
}
#focus__more-dropdown-triangle-outer {
    position: absolute;
    bottom: 27px;
    right: 6.9px;
    width: 13px;
    height: 11px;
    clip-path: polygon(0 0, 100% 0, 50% 100%);
    background-color: #fafafa;
}
#focus__more-dropdown-box-underneath { /* for not losing hover */
    position: absolute;
    bottom: 12px;
    right: -20px;
    width: 163px;
    height: 147px;
    /* background-color: rgba(1, 0, 0, .5); */
    background: transparent;
    z-index: -1;
}

/* Dark Mode Extra Elements */
.focus__dark-mode #enter-focus-mode-svg-icon {
    filter: invert(1);
}
.focus__dark-mode #focus__smiley-face {
    filter: brightness(0); /* white */
}

